# ChristmasMantelClock

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_pristine.bat  initlevels.bat  mantelclock_stm32f405.overlay  prj.conf
EEZ_Studio/Christmas_Mantelclock_UI/: Christmas_Mantelclock_UI.eez-project  Christmas_Mantelclock_UI.eez-project-ui-state
Hardware/: Mantel_Clock_Stand.stl
Hardware/JLCPCB/: Kerst_2025_PCB-BOM.csv  Kerst_2025_PCB-CPL.csv
boards/mantelclock/: Kconfig.mantelclock  board.cmake  board.yml  mantelclock.dts  mantelclock_defconfig
boards/yopocho/mantelclock@1.0.0/: Kconfig.mantelclock  board.cmake  board.yaml
src/: main.c  settings.h
src/ui/: actions.h  fonts.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui_font_courier_new_16.c  ui_font_courier_new_20.c  ui_font_courier_new_40.c  ui_font_courier_new_72.c  vars.h
